--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: 文柳轻扬的个人主页
+page-top-title: Wen-Liuqingyang
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Wen-Liuqingyang&ensp;|&ensp;文柳轻扬
+copyright-text: '&copy; Wen-Liuqingyang 2023-2025. All Rights Reserved.'
