--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: 文柳轻扬的个人主页
-page-top-title: Wen-Liuqingyang
-top-section-bg-text: Be what you wanna be
-home-subtitle: Wen-Liuqingyang&ensp;|&ensp;文柳轻扬
+page-top-title: 文柳轻扬
+top-section-bg-text: 一切皆为奇迹的起点
+home-subtitle: 文柳轻扬&ensp;|&ensp;Wen-Liuqingyang
 copyright-text: '&copy; Wen-Liuqingyang 2023-2025. All Rights Reserved.'
